=========================================================================
CHANGE LOG
=========================================================================

2008-09-29 Warren L. DeLano <warren@delsci.com>

	* fixed subtle div-zero bug in the view interpolation code
	
2008-09-24 Warren L. DeLano <warren@delsci.com>

	* fixed crash bug with blank CGO object

2008-09-12

	* added menu option & mechanism for removing plugins

	* fixed bugs with defer_builds_mode 5
	
2008-09-12 Warren L. DeLano <warren@delsci.com>	

	* added multipled FSAA to MacPyMOL
	
	* added experimental defer_builds_mode 5 for trajectory viewing
	
2008-09-07 Warren L. DeLano <warren@delsci.com>

	* improved ability to write images asynchronously as a web server
	
2008-09-05 Warren L. DeLano <warren@delsci.com>

	* fixed a couple of bugs introduced when making changes below
	
2008-08-22 Warren L. DeLano <warren@delsci.com>

	* addressed some performance issues with byres, bychain, & byseg
	
	* added a new cookbook example for a composited multi-clip 
	raytraced image examples/cookbook/multiclip_ray.pml
	
2008-08-21 Warren L. DeLano <warren@delsci.com>

	* fixed indexes output by get_raw_alignment: now 1-based

	* added new cookbook example for grafting selections across
	alignments: examples/cookbook/seq_match_sele.pml

2008-08-04 Warren L. DeLano <warren@delsci.com>

	* added map_auto_expand_sym setting to optionally prevent expansion
	
	* fixed problems with out-of-order execution with pasted scripts
	
2008-07-28 Warren L. DeLano <warren@delsci.com>

	* added support for apbs provided as part of FreeMOL
	
2008-07-25 Warren L. DeLano <warren@delsci.com>

	* fixed problem with scene name completion
	
	* added buttons options to the scene menu

	* fixed major bug in scene_order command
	
2008-07-24 Warren L. DeLano <warren@delsci.com>

	* added scene_buttons, scene_buttons_mode
	
	* fixed bug found in the previous implicit OR bug fix
	
	* fixed bug with unitialized memory in surfacing routines
	